feat: introduce AI module
