# src/ai/dto/translate-article.dto.ts
@@ -1,0 +1,12 @@
+import { IsOptional, IsString, IsNotEmpty } from 'class-validator';
+
+export class TranslateArticleDto {
+  @IsString()
+  @IsNotEmpty()
+  targetLanguage: string;
+
+  @IsOptional()
+  @IsString()
+  @IsNotEmpty()
+  sourceLanguage?: string;
+}
